Main oage i created a cards ad inside the cards i have an image and description botttom with css

--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,22 @@
     </div>
   </header>
   <main>
-    
+    <h1>Hello <span>Kids!</span></h1>
+    <p>Lets sings rhymes..!</p>
+    <div class="cards">
+      <div class="card">
+        <img src="./assets/card1img.jpg" alt="rhymes1">
+        <p>Sing with me</p>
+      </div>
+      <div class="card">
+        <img src="./assets/card2img.jpg" alt="rhymes2">
+        <p>Sing With me</p>
+      </div>
+      <div class="card">
+        <img src="./assets/card3img.jpg" alt="rhymes3">
+        <p>Sing with me</p>
+      </div>
+    </div>
   </main>
  
 </body>
